# clutchctl

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.windows  README.md  WINDOWS.md  build-windows.sh  windows-driver-installer.md
.cargo/: config.toml
.github/workflows/: ci.yml
clutchctl-cli/: Cargo.toml
clutchctl-cli/src/: cli.rs  main.rs
clutchctl-cli/src/commands/: list.rs  mod.rs  set.rs  show.rs
clutchctl-core/: Cargo.toml
clutchctl-core/src/: error.rs  lib.rs
clutchctl-core/src/configuration/: gamepad.rs  keyboard.rs  media.rs  mod.rs  mouse.rs  text.rs
clutchctl-core/src/device/: discovery.rs  ikkegol.rs  mod.rs  pcsensor.rs  traits.rs
clutchctl-core/src/protocol/: hid_keymap.rs  ikkegol.rs  mod.rs  packets.rs
clutchctl-core/src/usb/: interface_lock.rs  mod.rs
docs/: windows-terminal-colors.md
tests/: protocol_tests.rs
windows/: clutchctl-winusb.inf  install-driver.bat
