[workspace]
members = ["clutchctl-core", "clutchctl-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["clutchctl contributors"]
edition = "2026"
license = "MIT"
repository = "https://github.com/travisdieckmann/clutchctl"
rust-version = "1.70"

[workspace.dependencies]
# Core dependencies
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
bitflags = "2.4"
once_cell = "1.19"

# USB
rusb = "0.9"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }
colored = "2.1"
env_logger = "0.11"

# Testing
mockall = "0.12"
proptest = "1.4"