[workspace]
members = ["clutchctl-core", "clutchctl-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["clutchctl contributors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/travisdieckmann/clutchctl"
rust-version = "1.70"

[workspace.dependencies]
# Core dependencies
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
bitflags = "2.4"
once_cell = "1.19"

# USB HID - cross-platform HID communication
# Linux: libusb backend (not hidraw) to access interface 1 for bidirectional communication
# Windows: native Windows HID driver (no Zadig needed)
hidapi = { version = "2.6", default-features = false, features = ["linux-static-libusb", "windows-native"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }
colored = "2.1"
env_logger = "0.11"

# Testing
mockall = "0.12"
proptest = "1.4"