[package]
name = "clutchctl-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Command-line interface for USB HID foot pedal device configuration"

[[bin]]
name = "clutchctl"
path = "src/main.rs"

[dependencies]
clutchctl-core = { path = "../clutchctl-core", features = ["serialization"] }
clap = { workspace = true }
anyhow = { workspace = true }
colored = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }